HBase Change Log

Release 0.18.2 - Unreleased

  BUG FIXES
   HBASE-602   HBase Crash when network card has a IPv6 address
   HBASE-927   We don't recover if HRS hosting -ROOT-/.META. goes down -
               (back port from trunk)
   HBASE-1052  Stopping a HRegionServer with unflushed cache causes data loss
               from org.apache.hadoop.hbase.DroppedSnapshotException

  IMPROVEMENTS
   HBASE-1046  Narrow getClosestRowBefore by passing column family (backport)
   HBASE-1069  Show whether HRegion major compacts or not in INFO level


Release 0.18.1 - Released October 27, 2008

  BUG FIXES
   HBASE-891   HRS.validateValuesLength throws IOE, gets caught in the retries
   HBASE-906   [shell] Truncates output
   HBASE-912   PE is broken when other tables exist
   HBASE-918   Region balancing during startup makes cluster unstable
   HBASE-921   region close and open processed out of order; makes for 
               disagreement between master and regionserver on region state
   HBASE-925   HRS NPE on way out if no master to connect to
   HBASE-928   NPE throwing RetriesExhaustedException
   HBASE-576   Investigate IPC performance; partial.
   HBASE-924   Update hadoop in lib on 0.18 hbase branch to 0.18.1
   HBASE-930   RegionServer stuck: HLog: Could not append. Requesting close of
               log java.io.IOException: Could not get block locations. Aborting...
   HBASE-933   missing hbase.regions.slop in hbase-default.xml for 0.18 branch
               (Rong-en Fan via Stack)
   HBASE-926   If no master, regionservers should hang out rather than fail on
               connection and shut themselves down
   HBASE-946   Row with 55k deletes timesout scanner lease

  IMPROVEMENTS
   HBASE-920   Make region balancing sloppier

Release 0.18.0 - September 21st, 2008

  INCOMPATIBLE CHANGES
   HBASE-697   Thrift idl needs update/edit to match new 0.2 API (and to fix bugs)
               (Tim Sell via Stack)